--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -12,44 +12,35 @@
       class="grid max-w-2xl grid-cols-1 py-4 mt-24 -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2 "
     >
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-        <h3 class="mt-5 text-lg text-black font-display">Starter</h3>
+        <h3 class="mt-5 text-lg text-black font-display">Free Plan</h3>
         <p class="mt-2 text-sm text-gray-500">
-          Amazing for those attached to money with glue
+          Best for testing out our tool.
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-black font-display"
         >
-         €149
+         €0
         </p>
         <ul
           role="list"
           class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
         >
+        <li class="flex items-center">
+          <ion-icon
+            class="w-4 h-4 md hydrated"
+            name="checkmark-outline"
+            role="img"
+            aria-label="checkmark outline"></ion-icon><span class="ml-4">
+            10 call minutes free</span
+          >
+        </li>
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Connect 1 websites</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              1 bank accounts</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Track up to 1 credit cards</span
+              >Upload 20k words as knowledge</span
             >
           </li>
           <li class="flex items-center">
@@ -58,7 +49,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Analytics support</span
+              >Chat support</span
             >
           </li>
         </ul>
@@ -69,26 +60,35 @@
         >
       </section>
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-        <h3 class="mt-5 text-lg text-black font-display">Pro</h3>
+        <h3 class="mt-5 text-lg text-black font-display">Starter</h3>
         <p class="mt-2 text-sm text-gray-500">
           Good for those trying to get there, but are too far from it.
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-black font-display"
         >
-        €450
+        €19
         </p>
         <ul
           role="list"
           class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
         >
+        <li class="flex items-center">
+          <ion-icon
+            class="w-4 h-4 md hydrated"
+            name="checkmark-outline"
+            role="img"
+            aria-label="checkmark outline"></ion-icon><span class="ml-4">
+              250 min/month </span
+          >
+        </li>
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Connect 1 websites</span
+              >1 free phone number </span
             >
           </li>
           <li class="flex items-center">
@@ -97,7 +97,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              2 bank accounts</span
+                Upload 100k words as knowledge</span
             >
           </li>
           <li class="flex items-center">
@@ -106,7 +106,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Track up to 15 credit cards</span
+              >Chat and Email support</span
             >
           </li>
           <li class="flex items-center">
@@ -115,16 +115,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Analytics support</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              3 months data</span
+              >Analytics </span
             >
           </li>
         </ul>
@@ -137,26 +128,54 @@
       <section
         class="flex flex-col order-first px-6 py-8 rounded-3xl sm:px-8 bg-black  lg:order-none"
       >
-        <h3 class="mt-5 text-lg text-white font-display">Growth</h3>
+        <h3 class="mt-5 text-lg text-white font-display">Pro</h3>
         <p class="mt-2 text-sm text-accent-100">
-          Perfect for those leaving 9-5 and working 24/7.
+          Best for growing companies or those who need some help.
         </p>
         <p
           class="order-first text-5xl font-light tracking-tight text-white font-display"
         >
-          €900
+         €59
         </p>
         <ul
           role="list"
           class="flex flex-col order-last mt-10 text-sm text-white gap-y-3"
         >
+        <li class="flex items-center">
+          <ion-icon
+            class="w-4 h-4 md hydrated"
+            name="checkmark-outline"
+            role="img"
+            aria-label="checkmark outline"></ion-icon><span class="ml-4"
+            >1,000 min/month </span
+          >
+        </li>
           <li class="flex items-center">
             <ion-icon
               class="w-4 h-4 md hydrated"
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Connect 80 websites</span
+              >3 free phone numbers </span
+            >
+          </li>
+
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >Upload 200k words as knowledge </span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >Priority support </span
             >
           </li>
           <li class="flex items-center">
@@ -165,7 +184,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              5 bank accounts</span
+              Set up for you</span
             >
           </li>
           <li class="flex items-center">
@@ -174,43 +193,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Track up to 50 credit cards</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Analytics support</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              12 months data</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Cloud service 24/7</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Track in multiple users</span
+              >Analytics </span
             >
           </li>
         </ul>
@@ -219,6 +202,77 @@
           aria-label="Indie hacker tier"
           href="https://app.callsupport.ai">Get started</a
         >
+      </section>
+      <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
+        <h3 class="mt-5 text-lg text-black font-display">Growth</h3>
+        <p class="mt-2 text-sm text-gray-500">
+          For teams, needing top performance.
+        </p>
+        <p
+          class="order-first text-5xl font-light tracking-tight text-black font-display"
+        >
+          €450
+        </p>
+        <ul
+          role="list"
+          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
+        >
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >4,000 min/month</span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4">
+                Unlimited Voice Agents </span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >Track up to 200 credit cards</span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >Analytics</span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4">
+              24 months data</span
+            >
+          </li>
+        </ul>
+        <a
+        class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
+        aria-label="Big fish tier"
+        href="https://zcal.co/i/cL7eACvt"
+        target="_blank" 
+        rel="noopener noreferrer"
+      >
+        Get started
+      </a>
+      
       </section>
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
         <h3 class="mt-5 text-lg text-black font-display">Enterprise</h3>
@@ -248,15 +302,6 @@
               class="w-4 h-4 md hydrated"
               name="checkmark-outline"
               role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              15 bank accounts</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
               >Track up to 200 credit cards</span
             >
@@ -267,7 +312,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Analytics support</span
+              >Analytics </span
             >
           </li>
           <li class="flex items-center">
