--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -106,6 +106,15 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >10 Concurrent Calls </span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
               >Chat and Email support</span
             >
           </li>
@@ -167,6 +176,15 @@
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
               >Upload 200k words as knowledge </span
+            >
+          </li>
+          <li class="flex items-center">
+            <ion-icon
+              class="w-4 h-4 md hydrated"
+              name="checkmark-outline"
+              role="img"
+              aria-label="checkmark outline"></ion-icon><span class="ml-4"
+              >10 Concurrent Calls </span
             >
           </li>
           <li class="flex items-center">
@@ -241,7 +259,7 @@
               name="checkmark-outline"
               role="img"
               aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Track up to 200 credit cards</span
+              >10 Concurrent Calls </span
             >
           </li>
           <li class="flex items-center">
@@ -274,69 +292,9 @@
       </a>
       
       </section>
-      <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
-        <h3 class="mt-5 text-lg text-black font-display">Enterprise</h3>
-        <p class="mt-2 text-sm text-gray-500">
-          For even the biggest enterprise companies.
-        </p>
-        <p
-          class="order-first text-5xl font-light tracking-tight text-black font-display"
-        >
-          Contact us
-        </p>
-        <ul
-          role="list"
-          class="flex flex-col order-last mt-10 text-sm text-gray-600 gap-y-3"
-        >
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Connect unlimited websites</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Track up to 200 credit cards</span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4"
-              >Analytics </span
-            >
-          </li>
-          <li class="flex items-center">
-            <ion-icon
-              class="w-4 h-4 md hydrated"
-              name="checkmark-outline"
-              role="img"
-              aria-label="checkmark outline"></ion-icon><span class="ml-4">
-              24 months data</span
-            >
-          </li>
-        </ul>
-        <a
-        class="inline-flex items-center justify-center w-full px-6 py-3 h-12 mt-8 text-center text-black transition duration-200 ease-in-out transform bg-white border hover:bg-gray-200 hover:border-gray-200 rounded-xl focus:outline-none border-gray-200"
-        aria-label="Big fish tier"
-        href="https://zcal.co/i/cL7eACvt"
-        target="_blank" 
-        rel="noopener noreferrer"
-      >
-        Get started
-      </a>
-      
-      </section>
+
     </div>
+
     <div class="mx-auto pt-12 lg:py-16">
       <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
         <div class="flex justify-center col-span-1 px-8">
