--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -60,7 +60,7 @@
             class="absolute left-0 mt-2 w-48 bg-white border border-gray-200 rounded-md shadow-lg z-10"
             x-cloak>
             <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Real Estate</a>
-            <a href="/usecase2" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recrutiment</a>
+            <a href="/recruitment" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recrutiment</a>
             <a href="/usecase3" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Health</a>
             <a href="/usecase3" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Solar </a>
             <a href="/usecase3" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Car Dearlership </a>
