--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -61,9 +61,9 @@
             x-cloak>
             <a href="/estate" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Real Estate</a>
             <a href="/recruitment" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Recrutiment</a>
-            <a href="/usecase3" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Health</a>
-            <a href="/usecase3" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Solar </a>
-            <a href="/usecase3" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Car Dearlership </a>
+            <a href="/health" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Health</a>
+            <a href="/solar" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Solar </a>
+            <a href="/car-dealership" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Car Dearlership </a>
           </div>
         </div>
 
