icons browser issue fixed

--- a/src/components/landing/SectionOne.astro
+++ b/src/components/landing/SectionOne.astro
@@ -27,11 +27,22 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#6271fc"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+              </svg>
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -45,11 +56,22 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#6271fc"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+              </svg>
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -63,11 +85,22 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#6271fc"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+              </svg>
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -81,11 +114,22 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#6271fc"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+              </svg>
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -99,11 +143,22 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#6271fc"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+              </svg>
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
@@ -117,11 +172,22 @@
                 <div
                   class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10 lg:mx-auto"
                 >
-                  <ion-icon
-                    aria-label="scan outline"
-                    class="hydrated md h-4 w-4"
-                    name="scan-outline"
-                    role="img"></ion-icon>
+                <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#6271fc"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+                <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+                <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+                <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+              </svg>
                 </div><p
                   class="mt-4 text-lg font-semibold leading-6 text-black font-display tracking-tight"
                 >
