--- a/src/components/landing/SectionTwo.astro
+++ b/src/components/landing/SectionTwo.astro
@@ -30,12 +30,23 @@
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
             class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <ion-icon
-              aria-label="scan outline"
-              class="hydrated md h-5 w-5"
-              name="scan-outline"
-              role="img"
-            ></ion-icon>
+            <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="#6271fc"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+            <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+            <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+            <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+          </svg>
+          
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
           Ecommerce
@@ -48,12 +59,22 @@
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
             class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <ion-icon
-              aria-label="scan outline"
-              class="hydrated md h-5 w-5"
-              name="scan-outline"
-              role="img"
-            ></ion-icon>
+            <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="#6271fc"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+            <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+            <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+            <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+          </svg>
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Healthcare
@@ -66,12 +87,22 @@
         <div class="gap-3 lg:inline-flex lg:items-center">
           <div
             class="items-center justify-center text-accent-500 bg-gray-100 rounded-xl flex h-10 w-10">
-            <ion-icon
-              aria-label="scan outline"
-              class="hydrated md h-5 w-5"
-              name="scan-outline"
-              role="img"
-            ></ion-icon>
+            <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="20"
+            height="20"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="#6271fc"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+          >
+            <path d="M8 3H5a2 2 0 0 0-2 2v3"></path>
+            <path d="M16 3h3a2 2 0 0 1 2 2v3"></path>
+            <path d="M8 21H5a2 2 0 0 1-2-2v-3"></path>
+            <path d="M16 21h3a2 2 0 0 0 2-2v-3"></path>
+          </svg>
           </div><p
             class="mt-4 text-lg font-semibold leading-6 text-black font-display lg:mt-0">
             Real State
