enterprice section added

--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -66,7 +66,11 @@
             <a href="/car-dealership" class="block px-4 py-2 text-sm text-black hover:bg-gray-100">Car Dearlership </a>
           </div>
         </div>
-
+        <a
+        href="/blog"
+        class="hover:text-black">
+        Blog
+      </a>
         <a
           class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400"
           href="/faq">Faq</a>
