--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -295,6 +295,34 @@
 
     </div>
 
+
+    <div class="mx-auto pt-12 lg:py-16">
+      <section class="flex flex-col lg:flex-row items-center justify-between px-6 rounded-3xl lg:py- bg-gray-50 lg:gap-8">
+        <!-- Enterprise Pricing Section Content -->
+        <div class="flex flex-col lg:flex-row items-center lg:items-start">
+          <div class="lg:mr-8">
+            <h1 class="text-3xl font-bold text-black font-display">Enterprise</h1>
+            <div class="max-w-md">
+              <p class="text-sm text-gray-500">
+                Custom solutions for large teams, designed for businesses that demand top performance, scalability, and dedicated support.
+              </p>
+            </div>
+          </div>
+     
+        </div>
+        <a
+          class="inline-flex items-center justify-center w-full lg:w-auto px-6 py-3 h-12 mt-8 lg:mt-0 text-center text-white bg-blue-500 transition duration-200 ease-in-out transform hover:bg-blue-600 rounded-xl focus:outline-none"
+          aria-label="Contact Us"
+          href="founders@callsupport.ai"
+        >
+          Contact Us
+        </a>
+      </section>
+    </div>
+    
+    
+
+
     <div class="mx-auto pt-12 lg:py-16">
       <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
         <div class="flex justify-center col-span-1 px-8">
