enterprice section added

--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -313,7 +313,9 @@
         <a
           class="inline-flex items-center justify-center w-full lg:w-auto px-6 py-3 h-12 mt-8 lg:mt-0 text-center text-white bg-blue-500 transition duration-200 ease-in-out transform hover:bg-blue-600 rounded-xl focus:outline-none"
           aria-label="Contact Us"
-          href="founders@callsupport.ai"
+          href="#"
+  aria-disabled="true"
+  tabindex="-1"
         >
           Contact Us
         </a>
