--- a/src/components/global/Navigation.astro
+++ b/src/components/global/Navigation.astro
@@ -68,7 +68,7 @@
         </div>
         <a
         href="/blog"
-        class="hover:text-black">
+        class="px-2 lg:px-6 py-2 md:px-3 text-sm font-medium text-black hover:text-accent-400">
         Blog
       </a>
         <a
