--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -311,14 +311,12 @@
      
         </div>
         <a
-          class="inline-flex items-center justify-center w-full lg:w-auto px-6 py-3 h-12 mt-8 lg:mt-0 text-center text-white bg-blue-500 transition duration-200 ease-in-out transform hover:bg-blue-600 rounded-xl focus:outline-none"
-          aria-label="Contact Us"
-          href="#"
-  aria-disabled="true"
-  tabindex="-1"
-        >
-          Contact Us
-        </a>
+  href="#"
+  class="inline-flex items-center justify-center w-full gap-4 px-6 py-3 text-sm font-medium text-white transition rounded-xl bg-black group active:text-gray-900/60 active:transition-none outline-offset-2 hover:bg-white hover:text-black lg:w-auto mt-6 md:mt-0"
+>
+  Contact Us
+</a>
+
       </section>
     </div>
     
