footer logo added

--- a/src/components/global/Testimonial.astro
+++ b/src/components/global/Testimonial.astro
@@ -111,7 +111,7 @@
           </div>
           <footer class="mt-8">
             <p class="lg:text-sm text-gray-500 font-display">Felix Kleine</p>
-            <img class="h-8 mt-4" src="/assets/brands/Attentive.svg" alt="" />
+            <!-- <img class="h-8 mt-4" src="/public/testimoinal1.jpg" alt="" /> -->
           </footer>
         </div>
       </li>
@@ -209,9 +209,9 @@
               "Our return rate reduced significantly after implementing this, because AI could answer most of Customer inquiries"
             </p>
           </div>
-          <footer class="mt-8">
-            <p class="lg:text-sm text-gray-500 font-display">Yassin Baum</p>
-            <img class="h-8 mt-4" src="/assets/brands/Coinbase.svg" alt="" />
+          <footer class="flex justify-even mt-8">
+            <!-- <img class="h-8 mr-4" src="/public/testimoinal2.jpg" alt="" /> -->
+            <p class="lg:text-sm text-gray-500 font-display ml-4">Yassin Baum</p>
           </footer>
         </div>
       </li>
@@ -309,9 +309,9 @@
               "Using the product was a Wow moment for me. I did not know, AI voice was this good. Thought we were 3 years away from this quality of AI Voice Agents"
             </p>
           </div>
-          <footer class="mt-8">
+          <footer class="flex justify-between mt-8">
             <p class="lg:text-sm text-gray-500 font-display">Saad Saeed</p>
-            <img class="h-8 mt-4" src="/assets/brands/Figma.svg" alt="" />
+            <!-- <img class="h-8 rounded" src="/public/testimoinal4.jpg" alt="hghf" /> -->
           </footer>
         </div>
       </li>
