--- a/src/components/landing/Pricing.astro
+++ b/src/components/landing/Pricing.astro
@@ -9,7 +9,7 @@
     </div>
 
     <div
-      class="grid max-w-2xl grid-cols-1 py-4 mt-24 -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2 "
+      class="grid max-w-2xl grid-cols-1 py-4 mt-24 -mx-4 xl:-mx-12 sm:grid-cols-2 gap-y-10 sm:mx-auto lg:max-w-none lg:grid-cols-4 xl:gap-x-2"
     >
       <section class="flex flex-col px-6 rounded-3xl lg:py-8 bg-gray-50">
         <h3 class="mt-5 text-lg text-black font-display">Free Plan</h3>
@@ -296,8 +296,8 @@
     </div>
 
 
-    <div class="mx-auto pt-12 lg:py-16">
-      <section class="flex flex-col lg:flex-row items-center justify-between px-6 rounded-3xl lg:py- bg-gray-50 lg:gap-8">
+    <div class="mx-auto pt-12 py-4  gap-y-10 lg:py-16">
+      <section class="flex flex-col lg:flex-row items-center justify-between px-6  lg:py-8 bg-gray-50 rounded-3xl  bg-gray-50 lg:gap-8">
         <!-- Enterprise Pricing Section Content -->
         <div class="flex flex-col lg:flex-row items-center lg:items-start">
           <div class="lg:mr-8">
