--- a/src/components/infopages/Recrutiment.astro
+++ b/src/components/infopages/Recrutiment.astro
@@ -1,4 +1,4 @@
-<section class="bg-gray-100 py-16">
+<section class=" py-16">
     <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8">
       <h2 class="text-3xl font-bold mb-8 text-center">Streamline Interview Scheduling and Candidate Screening with AI</h2>
       <div class="grid md:grid-cols-2 gap-8 items-center">
@@ -30,7 +30,7 @@
     </div>
   </section>
   
-  <section class="bg-gray-100 py-16">
+  <section class=" py-16">
     <div class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8">
       <h2 class="text-3xl font-bold mb-8 text-center">Our Assistants for Recruitment in Numbers</h2>
       <div class="grid md:grid-cols-3 gap-8 text-center">
