landing page demo call added

--- a/src/components/infopages/Blog.astro
+++ b/src/components/infopages/Blog.astro
@@ -35,7 +35,7 @@
       </div>
       <!-- Blog Card 4 -->
       <div class="blog-card w-full mx-auto rounded-lg shadow-2xl overflow-hidden bg-white hover:shadow-2xl transition duration-300">
-        <a href={`/newnenw`}>
+        <a href={`/Understand-the-impact-of-AI-in-e-commerce-customer-service`}>
           <img src="https://tx.shadcn.com/_next/image?url=%2Fimages%2Fblog%2Fblog-post-3.jpg&w=750&q=75" alt="Blog Image 4" class="w-full h-48 object-cover">
         </a>
         <div class="p-4">
@@ -45,7 +45,7 @@
       </div>
       <!-- Blog Card 5 -->
       <div class="blog-card w-full mx-auto rounded-lg shadow-2xl overflow-hidden bg-white hover:shadow-2xl transition duration-300">
-        <a href={`/testing-ai-agent`}>
+        <a href={`/How-to-Leverage-AI-for-Better-E-commerce-Sales`}>
         <img src="https://callsupport-old.netlify.app/_next/image?url=%2F3.png&w=750&q=75" alt="Blog Image 5" class="w-full h-48 object-cover">
       </a>
         <div class="p-4">
