--- a/src/components/infopages/Demo.astro
+++ b/src/components/infopages/Demo.astro
@@ -1,25 +1,29 @@
+---
+import CallForm from '../Forms/CallForm.astro';
+---
 
 <section>
   <div
-    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
+    class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24"
+  >
     <div class="text-center max-w-4xl mx-auto">
       <div class="sm:flex sm:justify-center">
         <div
-          class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20">
+          class="relative rounded-full py-1 px-3 text-sm leading-6 text-gray-600 ring-1 ring-gray-900/10 hover:ring-gray-900/20"
+        >
           <a
             href="https://app.callsupport.ai/"
             class="font-semibold text-accent-600"
             ><span class="absolute inset-0" aria-hidden="true"></span>
             <span class="block lg:inline">
-              AI voice agents at scale <span aria-hidden="true"
-                >&rarr;</span
-              >
+              AI voice agents at scale <span aria-hidden="true">&rarr;</span>
             </span>
           </a>
         </div>
       </div>
       <p
-        class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8">
+        class="text-4xl tracking-tight font-semibold text-black md:text-5xl font-display mt-8"
+      >
         Live Demo for all Use Cases
       </p>
       <p class="text-gray-500 lg:text-xl max-w-2xl mt-4 mx-auto text-base">
@@ -27,5 +31,6 @@
       </p>
     </div>
 
+<CallForm />
   </div>
 </section>
