--- a/src/components/landing/Hero.astro
+++ b/src/components/landing/Hero.astro
@@ -1,3 +1,6 @@
+---
+import VoiceAIButton from '../infopages/VoiceAIButton.astro'
+---
 <section>
   <div
     class="mx-auto w-full lg:px-24 max-w-7xl md:px-12 items-center px-8 py-24">
@@ -57,11 +60,12 @@
 
     <div class="relative w-full mx-auto max-w-7xl items-center py-12 pb-12">
       <div class="bg-gray-100 p-8 rounded-3xl">
-        <img
+        <VoiceAIButton />
+        <!-- <img
           alt="#_"
           class="relative w-full border border-gray-200 lg:rounded-2xl object-cover rounded shadow-2xl"
           src="https://brightlight.lexingtonthemes.com/assets/dashboard.svg"
-        />
+        /> -->
       </div>
     </div>
     <div class="grid grid-cols-2 gap-0.5 lg:mt-8 md:grid-cols-6 mt-6">
