--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -29,4 +29,6 @@ import Footer from "../components/global/Footer.astro";
     <main class="grow"><slot /></main>
     <Footer/>
   </body>
+  <script src="/js/callFormHandler.js" defer></script>
+
 </html>
